# tgui-sdl_render-cmake

./: CMakeLists.txt  README.md  run_cmake.bat
assets/: bucket.txt
src/: CMakeLists.txt  main.cpp  update_sources.sh
src/assets/: bucket.txt
